# life

./: .gitignore  ABSTRACT_TITLE_OPTIONS_BCC.md  ALPHAFOLD_RESEARCH_BUILD_COMPLETE.md  AUDIT_FIXES_COMPLETE.md  CITATION.cff  DELIVERABLES_CHECKLIST.md  Dockerfile.qwen  Dockerfile.runpod  FINAL_MANUSCRIPT_UPDATE_GUIDE.md  FINAL_PRE_SUBMISSION_SUMMARY.md  FINAL_REPO_MAP.md  FINAL_SUBMISSION_CHECKLIST.md  GITHUB_LINKS.md  GITHUB_SETUP.md  IMPLEMENTATION_COMPLETE.md  INSTELLA_ANTIGRAVITY_MISSION.md  INSTELLA_INTEGRATION_COMPLETE.md  INSTELLA_MASTER_INDEX.md  INSTELLA_QUICKSTART.md  INSTELLA_STATUS.md  LONGEVITY_FRAMEWORK.md  MANIFEST.in  MANUSCRIPT_PLAN_BCC.md  MANUSCRIPT_PLAN_BCC_INSTELLA.md  MANUSCRIPT_PREVIEW.md  MANUSCRIPT_REORGANIZATION_SUMMARY.md  MANUSCRIPT_SCIENTIFIC_ANALYSIS.md  Makefile  NATURE_PEER_REVIEW_REPORT.md  PEER_REVIEW_SUMMARY.md  PROJECT_SUMMARY.md  PROJECT_TREE.txt  PROJECT_TREE_INSTELLA.txt  PRX_LIFE_DATA_CODE_BLURB.md  PUSH_SUMMARY.md  QUICK_START_PUBLICATION.md  QWEN_VS_INSTELLA.md  RAGFLOW_INTEGRATION_SUMMARY.md  RAGFLOW_RESEARCH_STRATEGY.md  README.md  (+59 more)
alphafold_analysis/: BCC_ALPHAFOLD_EVIDENCE.md  COMMIT_READY.md  FINAL_STATUS.md  FIXES_APPLIED.md  PIPELINE_STATUS.md  QUICKSTART.md  README.md  RESEARCH_SUMMARY.md  SUBMISSION_GUIDE.md  UNIPROT_VERIFICATION_COMPLETE.md  VERIFICATION_COMPLETE.md  analyze_bcc_structures.py  bcc_analysis_report.md  bcc_protein_database.py  fetch_bcc_structures.py  fix_invalid_pdbs.py  investigate_not_found.py  longevity_sequences.txt  refresh_corrected_proteins.py
analysis/: 01_data_audit.py  05_longevity_demo.py  structure_report.txt  utils.py
benchmarks/: performance_benchmark.py
biology_reasearch/: FINAL_SUBMISSION_READY.md  README.md  STRUCTURED_RESEARCH_REPORT.md  UNIFIED_MANUSCRIPT.tex  pyproject.toml  requirements.txt
biology_reasearch/docs/: cli.md  countercurvature_metrics.md  index.md
biology_reasearch/experiments/: generate_bcc_figures.py
biology_reasearch/manuscript/: references.bib
biology_reasearch/manuscript/sections/: abstract.tex  availability.tex  conclusion.tex  figures.tex  theory.tex
biology_reasearch/src/spinalmodes/countercurvature/: scoliosis_metrics.py
biology_reasearch/src/spinalmodes/experiments/countercurvature/: common.py  experiment_spine_modes_vs_gravity.py  generate_countercurvature_figure.py  sensitivity_analysis.py
biology_reasearch/src/spinalmodes/model/solvers/: euler_bernoulli.py
biology_reasearch/tests/: test_countercurvature_metrics.py  test_scoliosis_metrics.py
chroma_db/: chroma.sqlite3
chroma_db_llama/: chroma.sqlite3
countercurvature/: 01_Abstract.md  02_Introduction.md  03_Theory.md  04_Methods.md  05_Results.md  06_Discussion.md  07_Conclusion.md  EXECUTIVE_SUMMARY.md  MANUSCRIPT_COMPLETE.md  Makefile  README.md  RESEARCH_AUDIT_AND_ROADMAP.md  RESEARCH_REPORT_BCC.md  references.bib  requirements.txt
docs/: CSF_Buoyancy_Gravity_Spacetime_Curvature.md  CSF_Role_Hydrocephalus_Syrinx.md  Cilia_CSF_Implementation_Guide.md  Countercurvature_Model_Notes.md  DATA_EXTRACTION_TEMPLATE.md  Experimental_Protocols_Gravity_Buoyancy.md  Gravity_Buoyancy_Implementation_Summary.md  Grimes_IEC_Connection_Analysis.md  Implementation_Summary.md  NEXT_STEPS_CHECKLIST.md  PAPER_TIGHTENING_GUIDE.md  PERFORMANCE_SUMMARY.md  Zebrafish_Motile_Cilia_SOPs.md  author_information.md  concept_map_countercurvature.md  cover_letter_expansion_template.md  final_ship_mode_guide.md  (+10 more)
(+400 files in other folders)
